# tinyXMLexample

./: CMakeLists.txt  README.md  main.cpp
resources/: configGlobal.xml
